[gd_scene load_steps=5 format=3 uid="uid://cak16c1nl07jn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ft8fq"]
[ext_resource type="Texture2D" uid="uid://wahtl5goamk" path="res://assets/textures/player/10110.svg" id="2_57iw8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yhcay"]
radius = 19.105

[sub_resource type="CircleShape2D" id="CircleShape2D_g8tjl"]
radius = 20.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_ft8fq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yhcay")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.19218, 0.19218)
texture = ExtResource("2_57iw8")

[node name="Playeri" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playeri"]
shape = SubResource("CircleShape2D_g8tjl")

[connection signal="cooldown_start" from="." to="." method="_on_cooldown_start"]
[connection signal="body_entered" from="Playeri" to="." method="_on_playeri_body_entered"]
